--- a/ExampleApp/imgui.ini
+++ b/ExampleApp/imgui.ini
@@ -13,7 +13,7 @@ DockId=0x00000002,0
 Pos=374,0
 Size=796,617
 Collapsed=0
-DockId=0x00000001,1
+DockId=0x00000001,0
 
 [Window][Example: Documents]
 Pos=60,60
@@ -180,7 +180,7 @@ DockSpace             ID=0x08BD597D Window=0x1BBC0F80 Pos=0,0 Size=1600,900 Spli
       DockNode        ID=0x00000008 Parent=0x00000009 SizeRef=848,720 Split=X
         DockNode      ID=0x00000005 Parent=0x00000008 SizeRef=418,720 Split=X
           DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=816,720 Split=X
-            DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=992,720 CentralNode=1 Selected=0x15E43931
+            DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=992,720 CentralNode=1 Selected=0x5E5F7166
             DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=286,720 Selected=0x1FC7AC8C
           DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=462,720 Selected=0x38CCB771
         DockNode      ID=0x00000006 Parent=0x00000008 SizeRef=428,720 Selected=0xD7907EC4
