ecs system stuff

--- a/ExampleApp/ExampleApp.vcxproj
+++ b/ExampleApp/ExampleApp.vcxproj
@@ -107,6 +107,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\TestTimer.h" />
     <ClInclude Include="src\WindowTest.h" />
   </ItemGroup>
   <ItemGroup>
