--- a/ExampleApp/ExampleApp.vcxproj.filters
+++ b/ExampleApp/ExampleApp.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClInclude Include="src\WindowTest.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\TestTimer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Main.cpp">
