--- a/MofuEngine/MofuEngine.vcxproj
+++ b/MofuEngine/MofuEngine.vcxproj
@@ -110,9 +110,11 @@
     <ClCompile Include="Content\ShaderCompilation.cpp" />
     <ClCompile Include="Core\Engine.cpp" />
     <ClCompile Include="Core\Main.cpp" />
+    <ClCompile Include="ECS\ECSCore.cpp" />
     <ClCompile Include="ECS\Scene.cpp" />
     <ClCompile Include="Editor\AssetBrowser.cpp" />
     <ClCompile Include="Editor\EditorInterface.cpp" />
+    <ClCompile Include="EngineAPI\ECS\SceneAPI.cpp" />
     <ClCompile Include="External\imgui\include\imgui.cpp" />
     <ClCompile Include="External\imgui\include\imgui_demo.cpp" />
     <ClCompile Include="External\imgui\include\imgui_draw.cpp" />
@@ -173,17 +175,22 @@
     <ClInclude Include="Content\ResourceCreation.h" />
     <ClInclude Include="Content\ShaderCompilation.h" />
     <ClInclude Include="Core\EngineModules.h" />
+    <ClInclude Include="ECS\QueryView.h" />
     <ClInclude Include="ECS\Component.h" />
     <ClInclude Include="ECS\ECSCommon.h" />
+    <ClInclude Include="ECS\ECSCore.h" />
     <ClInclude Include="ECS\Entity.h" />
     <ClInclude Include="ECS\EntityManager.h" />
     <ClInclude Include="ECS\Scene.h" />
     <ClInclude Include="ECS\SystemRegistry.h" />
+    <ClInclude Include="ECS\Systems\SubmitEntityRenderSystem.cpp" />
+    <ClInclude Include="ECS\Systems\TransformSystem.cpp" />
     <ClInclude Include="ECS\Transform.h" />
     <ClInclude Include="Editor\AssetBrowser.h" />
     <ClInclude Include="Editor\EditorInterface.h" />
     <ClInclude Include="EngineAPI\Camera.h" />
-    <ClInclude Include="EngineAPI\ECS\System.h" />
+    <ClInclude Include="EngineAPI\ECS\SceneAPI.h" />
+    <ClInclude Include="EngineAPI\ECS\SystemAPI.h" />
     <ClInclude Include="External\imgui\include\imconfig.h" />
     <ClInclude Include="External\imgui\include\imgui.h" />
     <ClInclude Include="External\imgui\include\imgui_impl_dx12.h" />
