new ecs things and scene hierarchy UI for entities and their components

--- a/ExampleApp/imgui.ini
+++ b/ExampleApp/imgui.ini
@@ -10,8 +10,8 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Dear ImGui Demo]
-Pos=307,0
-Size=525,668
+Pos=636,0
+Size=196,668
 Collapsed=0
 DockId=0x00000001,0
 
@@ -103,7 +103,7 @@ Size=400,600
 Collapsed=0
 
 [Window][Scene View]
-Pos=80,234
+Pos=92,458
 Size=702,394
 Collapsed=0
 
@@ -124,20 +124,20 @@ Size=409,172
 Collapsed=0
 
 [Window][Asset Browser]
-Pos=307,670
-Size=1293,230
+Pos=636,670
+Size=964,230
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Scene hierarchy]
 Pos=0,0
-Size=305,900
+Size=634,900
 Collapsed=0
 DockId=0x0000000B,0
 
 [Window][Scene hierarchy/##tree_2774B01A]
 IsChild=1
-Size=300,865
+Size=289,865
 
 [Table][0x2048C668,2]
 RefScale=13
@@ -170,14 +170,19 @@ Column 3  Width=68
 Column 4  Weight=1.0000
 Column 5  Width=-1
 
+[Table][0xE0272E39,2]
+RefScale=13
+Column 0  Width=69
+Column 1  Weight=2.0000
+
 [Docking][Data]
 DockSpace             ID=0x08BD597D Window=0x1BBC0F80 Pos=0,0 Size=1600,900 Split=X Selected=0x15E43931
-  DockNode            ID=0x0000000B Parent=0x08BD597D SizeRef=305,900 Selected=0xBE5CABD5
-  DockNode            ID=0x0000000C Parent=0x08BD597D SizeRef=1293,900 Split=Y
+  DockNode            ID=0x0000000B Parent=0x08BD597D SizeRef=634,900 Selected=0xBE5CABD5
+  DockNode            ID=0x0000000C Parent=0x08BD597D SizeRef=964,900 Split=Y
     DockNode          ID=0x00000009 Parent=0x0000000C SizeRef=1280,668 Split=X
       DockNode        ID=0x00000007 Parent=0x00000009 SizeRef=430,720 Selected=0x256ED220
       DockNode        ID=0x00000008 Parent=0x00000009 SizeRef=848,720 Split=X
-        DockNode      ID=0x00000005 Parent=0x00000008 SizeRef=525,720 Split=X
+        DockNode      ID=0x00000005 Parent=0x00000008 SizeRef=196,720 Split=X
           DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=816,720 Split=X
             DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=992,720 CentralNode=1 Selected=0x5E5F7166
             DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=286,720 Selected=0x1FC7AC8C
