--- a/MofuEngine/MofuEngine.vcxproj
+++ b/MofuEngine/MofuEngine.vcxproj
@@ -117,6 +117,8 @@
     <ClCompile Include="ECS\ECSCore.cpp" />
     <ClCompile Include="ECS\Scene.cpp" />
     <ClCompile Include="ECS\SceneSerializer.cpp" />
+    <ClCompile Include="ECS\Systems\CameraFreeLookSystem.cpp" />
+    <ClCompile Include="ECS\Systems\InputTestSystem.cpp" />
     <ClCompile Include="ECS\Systems\PrepareFrameRenderSystem.cpp" />
     <ClCompile Include="ECS\Systems\PreparePerObjectDataRenderSystem.cpp" />
     <ClCompile Include="Editor\AssetBrowser.cpp" />
@@ -153,6 +155,8 @@
     <ClCompile Include="Graphics\D3D12\D3D12Upload.cpp" />
     <ClCompile Include="Graphics\GeometryData.cpp" />
     <ClCompile Include="Graphics\Renderer.cpp" />
+    <ClCompile Include="Input\InputSystem.cpp" />
+    <ClCompile Include="Input\Win32Input.cpp" />
     <ClCompile Include="Platform\Platform.cpp" />
     <ClCompile Include="Platform\Win32Platform.cpp" />
     <ClCompile Include="Platform\Window.cpp" />
@@ -237,6 +241,9 @@
     <ClInclude Include="Graphics\GraphicsPlatformInterface.h" />
     <ClInclude Include="Graphics\GraphicsTypes.h" />
     <ClInclude Include="Graphics\Renderer.h" />
+    <ClInclude Include="Input\InputState.h" />
+    <ClInclude Include="Input\InputSystem.h" />
+    <ClInclude Include="Input\Win32Input.h" />
     <ClInclude Include="Platform\Platform.h" />
     <ClInclude Include="Platform\PlatformWin32.h" />
     <ClInclude Include="Platform\Window.h" />
