importing textures and viewing them in the editor

--- a/ExampleApp/imgui.ini
+++ b/ExampleApp/imgui.ini
@@ -89,7 +89,7 @@ Size=520,600
 Collapsed=0
 
 [Window][Dear ImGui Style Editor]
-Pos=56,62
+Pos=206,16
 Size=353,1003
 Collapsed=0
 
@@ -103,8 +103,8 @@ Size=400,600
 Collapsed=0
 
 [Window][Scene View]
-Pos=630,98
-Size=1395,784
+Pos=144,175
+Size=410,230
 Collapsed=0
 
 [Window][Logs]
@@ -138,6 +138,16 @@ DockId=0x0000000B,0
 [Window][Scene hierarchy/##tree_2774B01A]
 IsChild=1
 Size=289,865
+
+[Window][Dear ImGui ID Stack Tool]
+Pos=60,60
+Size=323,104
+Collapsed=0
+
+[Window][Texture View]
+Pos=117,15
+Size=747,686
+Collapsed=0
 
 [Table][0x2048C668,2]
 RefScale=13
