--- a/ExampleApp/imgui.ini
+++ b/ExampleApp/imgui.ini
@@ -7,13 +7,13 @@ Collapsed=0
 Pos=994,0
 Size=286,720
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x08BD597D,0
 
 [Window][Dear ImGui Demo]
-Pos=636,0
-Size=196,668
+Pos=0,0
+Size=1600,900
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x08BD597D,0
 
 [Window][Example: Documents]
 Pos=60,60
@@ -28,7 +28,7 @@ Collapsed=0
 [Window][Example: Property editor]
 Size=430,617
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x08BD597D,0
 
 [Window][Example: Property editor/##tree_37EC733C]
 IsChild=1
@@ -38,7 +38,7 @@ Size=300,582
 Pos=818,0
 Size=462,720
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x08BD597D,0
 
 [Window][Example: Assets Browser]
 Pos=60,60
@@ -103,15 +103,15 @@ Size=400,600
 Collapsed=0
 
 [Window][Scene View]
-Pos=144,175
-Size=410,230
+Pos=253,162
+Size=812,456
 Collapsed=0
 
 [Window][Logs]
-Pos=834,0
-Size=766,668
+Pos=0,0
+Size=1600,900
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x08BD597D,1
 
 [Window][Stacked 2]
 Pos=527,313
@@ -124,16 +124,16 @@ Size=409,172
 Collapsed=0
 
 [Window][Asset Browser]
-Pos=636,670
-Size=964,230
+Pos=0,0
+Size=1600,900
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x08BD597D,3
 
 [Window][Scene hierarchy]
 Pos=0,0
-Size=634,900
+Size=1600,900
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x08BD597D,2
 
 [Window][Scene hierarchy/##tree_2774B01A]
 IsChild=1
@@ -145,8 +145,8 @@ Size=323,104
 Collapsed=0
 
 [Window][Texture View]
-Pos=117,15
-Size=747,686
+Pos=539,28
+Size=830,798
 Collapsed=0
 
 [Table][0x2048C668,2]
@@ -186,17 +186,5 @@ Column 0  Width=69
 Column 1  Weight=2.0000
 
 [Docking][Data]
-DockSpace             ID=0x08BD597D Window=0x1BBC0F80 Pos=0,0 Size=1600,900 Split=X Selected=0x15E43931
-  DockNode            ID=0x0000000B Parent=0x08BD597D SizeRef=634,900 Selected=0xBE5CABD5
-  DockNode            ID=0x0000000C Parent=0x08BD597D SizeRef=964,900 Split=Y
-    DockNode          ID=0x00000009 Parent=0x0000000C SizeRef=1280,668 Split=X
-      DockNode        ID=0x00000007 Parent=0x00000009 SizeRef=430,720 Selected=0x256ED220
-      DockNode        ID=0x00000008 Parent=0x00000009 SizeRef=848,720 Split=X
-        DockNode      ID=0x00000005 Parent=0x00000008 SizeRef=196,720 Split=X
-          DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=816,720 Split=X
-            DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=992,720 CentralNode=1 Selected=0x5E5F7166
-            DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=286,720 Selected=0x1FC7AC8C
-          DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=462,720 Selected=0x38CCB771
-        DockNode      ID=0x00000006 Parent=0x00000008 SizeRef=766,720 Selected=0xD7907EC4
-    DockNode          ID=0x0000000A Parent=0x0000000C SizeRef=1280,230 Selected=0x36AF052B
+DockSpace ID=0x08BD597D Window=0x1BBC0F80 Pos=0,0 Size=1600,900 CentralNode=1 Selected=0x5E5F7166
 
