fixed element buffer

--- a/ExampleApp/imgui.ini
+++ b/ExampleApp/imgui.ini
@@ -7,13 +7,13 @@ Collapsed=0
 Pos=994,0
 Size=286,720
 Collapsed=0
-DockId=0x08BD597D,0
+DockId=0x00000002,0
 
 [Window][Dear ImGui Demo]
-Pos=0,0
-Size=1600,900
+Pos=768,0
+Size=432,654
 Collapsed=0
-DockId=0x08BD597D,0
+DockId=0x00000002,0
 
 [Window][Example: Documents]
 Pos=60,60
@@ -28,7 +28,7 @@ Collapsed=0
 [Window][Example: Property editor]
 Size=430,617
 Collapsed=0
-DockId=0x08BD597D,0
+DockId=0x00000002,0
 
 [Window][Example: Property editor/##tree_37EC733C]
 IsChild=1
@@ -38,7 +38,7 @@ Size=300,582
 Pos=818,0
 Size=462,720
 Collapsed=0
-DockId=0x08BD597D,0
+DockId=0x00000002,0
 
 [Window][Example: Assets Browser]
 Pos=60,60
@@ -89,7 +89,7 @@ Size=520,600
 Collapsed=0
 
 [Window][Dear ImGui Style Editor]
-Pos=206,16
+Pos=192,20
 Size=353,1003
 Collapsed=0
 
@@ -103,15 +103,15 @@ Size=400,600
 Collapsed=0
 
 [Window][Scene View]
-Pos=253,162
-Size=812,456
+Pos=270,161
+Size=1145,644
 Collapsed=0
 
 [Window][Logs]
-Pos=0,0
-Size=1600,900
+Pos=1202,0
+Size=398,654
 Collapsed=0
-DockId=0x08BD597D,1
+DockId=0x00000004,0
 
 [Window][Stacked 2]
 Pos=527,313
@@ -124,20 +124,20 @@ Size=409,172
 Collapsed=0
 
 [Window][Asset Browser]
-Pos=0,0
-Size=1600,900
+Pos=0,656
+Size=1600,244
 Collapsed=0
-DockId=0x08BD597D,3
+DockId=0x00000006,0
 
 [Window][Scene hierarchy]
 Pos=0,0
-Size=1600,900
+Size=766,654
 Collapsed=0
-DockId=0x08BD597D,2
+DockId=0x00000001,0
 
 [Window][Scene hierarchy/##tree_2774B01A]
 IsChild=1
-Size=289,865
+Size=289,619
 
 [Window][Dear ImGui ID Stack Tool]
 Pos=60,60
@@ -145,9 +145,14 @@ Size=323,104
 Collapsed=0
 
 [Window][Texture View]
-Pos=539,28
+Pos=445,59
 Size=830,798
 Collapsed=0
+
+[Window][Material View]
+Pos=60,60
+Size=547,552
+Collapsed=1
 
 [Table][0x2048C668,2]
 RefScale=13
@@ -186,5 +191,11 @@ Column 0  Width=69
 Column 1  Weight=2.0000
 
 [Docking][Data]
-DockSpace ID=0x08BD597D Window=0x1BBC0F80 Pos=0,0 Size=1600,900 CentralNode=1 Selected=0x5E5F7166
+DockSpace       ID=0x08BD597D Window=0x1BBC0F80 Pos=0,0 Size=1600,900 Split=Y Selected=0x5E5F7166
+  DockNode      ID=0x00000005 Parent=0x08BD597D SizeRef=1600,654 Split=X
+    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=1200,900 Split=X
+      DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=766,900 Selected=0xBE5CABD5
+      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=432,900 CentralNode=1 Selected=0x5E5F7166
+    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=398,900 Selected=0xD7907EC4
+  DockNode      ID=0x00000006 Parent=0x08BD597D SizeRef=1600,244 Selected=0x36AF052B
 
